adjusted spacing in hero and footer for mobile + fixed impact header overlap

--- a/scss/donate.scss
+++ b/scss/donate.scss
@@ -471,4 +471,7 @@ h2 {
   .col-sm {
     padding-bottom: 5%;
   }
+  .footer .container{
+    padding-top: 40px;
+  }
 }
